--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "City Bank Payment Gateway Implementation",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "nodemon": "^1.18.11",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "xml2json": "^0.11.2"
